--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html><html lang="en"><head>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.dom.min.js"></script>
-  <script src="libraries/matter.js"></script>
   <script src="libraries/p5.play.js"></script>
 
   <script src="js/form.js"></script>
-<!--Link game.js e player.js-->
   <script src="js/game.js"></script>
   <script src="js/player.js"></script>
+
    
+
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
 
-<!--Adicione configuração do banco de dados abaixo-->
-
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
-  var firebaseConfig = {
-
-  apiKey: "AIzaSyDkon3Ijk0wEPk0qQh40ehAOtAlS5EEmt0",
-
-  authDomain: "fruit-basket-6831e.firebaseapp.com",
-
-  databaseURL: "https://fruit-basket-6831e-default-rtdb.firebaseio.com",
-
-  projectId: "fruit-basket-6831e",
-
-  storageBucket: "fruit-basket-6831e.appspot.com",
-
-  messagingSenderId: "97542642275",
-
-  appId: "1:97542642275:web:575c28563dc453e0483656"
-
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyCJdlc8017r6FkQwpFhCqOauw62t797_9w",
+    authDomain: "fruit-catcher-5ad1e.firebaseapp.com",
+    databaseURL: "https://fruit-catcher-5ad1e-default-rtdb.firebaseio.com",
+    projectId: "fruit-catcher-5ad1e",
+    storageBucket: "fruit-catcher-5ad1e.appspot.com",
+    messagingSenderId: "993009870042",
+    appId: "1:993009870042:web:c7dc6bd802df06940971e3"
   };
-
-  const app = initializeApp(firebaseConfig);
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
 </script>
-
+  
+  
+ 
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 
 </head>
 <body>
   <script src="sketch.js"></script>
-
 
 
 </body></html>
